[gd_scene load_steps=14 format=3 uid="uid://cxbu6b0mw7ak1"]

[ext_resource type="Script" path="res://Scripts/UI/mainMenu.gd" id="1_p3m42"]
[ext_resource type="Texture2D" uid="uid://11sh3eeyun5x" path="res://Assets/UiGame/setting/Rectangle 65.png" id="2_v72gl"]
[ext_resource type="Texture2D" uid="uid://bs6b382rbycqt" path="res://Assets/UiGame/Pause/Background game Over.png" id="3_7q3a3"]
[ext_resource type="Texture2D" uid="uid://cfcu5q718spvs" path="res://Assets/UiGame/setting/Rectangle 17.png" id="3_f5vco"]
[ext_resource type="Texture2D" uid="uid://cw0sd27w0elsn" path="res://Assets/UiGame/Pause/Group 8.png" id="5_hv3os"]
[ext_resource type="FontFile" uid="uid://dc7rpxi1bjtqp" path="res://Assets/UiGame/LilitaOne-Regular.ttf" id="6_vb8gg"]
[ext_resource type="Texture2D" uid="uid://7g76aib38eic" path="res://Assets/UiGame/Pause/Group 9.png" id="7_qnbwu"]

[sub_resource type="Theme" id="Theme_oahkf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wtevl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_imxvt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_86hum"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v7322"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ddxvs"]

[node name="Game" type="Node"]

[node name="Game Over" type="Control" parent="."]
light_mask = 31
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p3m42")

[node name="Background" type="TextureRect" parent="Game Over"]
light_mask = 2
layout_mode = 1
anchors_preset = -1
anchor_top = 0.007
anchor_right = 1.0
anchor_bottom = 1.007
offset_top = -0.800001
offset_bottom = -0.800293
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_v72gl")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="TextureRect2" type="TextureRect" parent="Game Over"]
layout_mode = 0
offset_left = 64.0
offset_top = 336.0
offset_right = 1016.0
offset_bottom = 2048.0
texture = ExtResource("3_f5vco")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="Game Over"]
layout_mode = 0
offset_left = -9.0
offset_top = 281.0
offset_right = 1087.0
offset_bottom = 2140.0
texture = ExtResource("3_7q3a3")
expand_mode = 1

[node name="ui" type="TextureRect" parent="Game Over"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Main MEnu" type="TextureRect" parent="Game Over"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 371.0
offset_top = 1712.0
offset_right = -362.0
offset_bottom = -546.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_hv3os")
expand_mode = 1

[node name="Button Mainmenu" type="Button" parent="Game Over/Main MEnu"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 346.0
offset_bottom = 130.0
theme = SubResource("Theme_oahkf")
theme_override_fonts/font = ExtResource("6_vb8gg")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_wtevl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_imxvt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_86hum")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v7322")
text = "Main Menu"

[node name="Button" type="Button" parent="Game Over"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.338
anchor_top = 0.173
anchor_right = 0.669
anchor_bottom = 0.233
offset_left = -0.0400391
offset_top = 0.799988
offset_right = 0.47998
offset_bottom = 0.799988
grow_horizontal = 2
theme_override_colors/font_color = Color(0.447059, 0.572549, 0.752941, 1)
theme_override_fonts/font = ExtResource("6_vb8gg")
theme_override_font_sizes/font_size = 90
text = "GAME OVER"
flat = true

[node name="Restart" type="TextureRect" parent="Game Over"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 369.0
offset_top = 1508.0
offset_right = -362.0
offset_bottom = -752.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_qnbwu")
expand_mode = 1

[node name="Button restart" type="Button" parent="Game Over/Restart"]
layout_mode = 0
offset_right = 350.0
offset_bottom = 127.0
theme = SubResource("Theme_oahkf")
theme_override_fonts/font = ExtResource("6_vb8gg")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxEmpty_wtevl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_imxvt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ddxvs")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v7322")
text = "Restart"

[connection signal="pressed" from="Game Over/Main MEnu/Button Mainmenu" to="Game Over" method="_on_button_mainmenu_pressed"]
[connection signal="pressed" from="Game Over/Restart/Button restart" to="Game Over" method="_on_button_resume_pressed"]
